<resources>
    <string name="app_name">Clocking Monkey</string>
    <string name="splashActivity_loading_text">CARGANDO...</string>
    <string name="register_button_text">Registro</string>
    <string name="confirmPassword_text">Confirma tu contraseña</string>
    <string name="password_text">Contraseña</string>
    <string name="email_text">Email</string>
    <string name="login_button_text">Login</string>
    <string name="profile_menuItem_title">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="assists_fragment_title">REGISTRO DE ASISTENCIAS</string>
    <string name="clockIn_fragment_title">ELIJA MODO DE FICHAJE</string>
    <string name="QR_option_button_text">QR</string>
    <string name="NFC_option_button_text">NFC</string>
    <string name="ebeacon_option_button_text">Ebeacon</string>
    <string name="qr_name">Scan_QR</string>
    <string name="scan_qr">Scan QR</string>
    <string name="clockin_option_text">ClockIn</string>
    <string name="register_option_text">Register</string>
    <string name="qr_button_back">Atrás</string>
    <string name="qr_button_clockin">Fichar</string>
    <string name="secondLastname_text">Segundo Apellido</string>
    <string name="name_text">Nombre</string>
    <string name="first_lastname_text">Primer Apellido</string>
    <string name="change_password_btn">Cambiar contraseña</string>
    <string name="logout_btn">Desloguearse</string>
    <string name="saveChanges_btn_text">Guardar Cambios</string>
    <string name="comment_et_hint">Escribe un comentario...</string>
    <string name="comment_title">¿Quieres explicar por qué has fichado para entrar y salir de forma tan seguida?</string>
    <string name="comment_btn_text">Guardar Comentario</string>
    <string name="inBtn_text">ENTRADA</string>
    <string name="outBtn_text">SALIDA</string>
    <!-- Beacon -->
    <string name="not_support_bluetooth_msg">Este dispositivo no soporta bluetooth, no es posible buscar beacons</string>
    <string name="no_bluetooth_msg">Con el bluetooth desactivado no es posible buscar beacons</string>
    <string name="start_looking_for_beacons">Empezando a buscar beacons</string>
    <string name="no_beacons_detected">No se han encontrado beacons</string>
    <string name="stop_looking_for_beacons">Parando la búsqueda de beacons</string>
    <string name="location_access_needed">Esta aplicación necesita acceso a la localización</string>
    <string name="grant_location_access">Por favor conceda permisos de localización para que la aplicación pueda detectar beacons</string>
    <string name="funcionality_limited">Funcionalidad limitada</string>
    <string name="cannot_discover_beacons">esta aplicación no podrá buscar beacons</string>
    <string name="location_not_granted">Ya que el permiso de localización no ha sido concedido,</string>
    <string name="location_disabled">Localización en modo alta precisión no activado</string>
    <string name="location_settings">Abrir ajustes de localización</string>
    <string name="clockIn_btn_text">Fichar</string>
    <string name="showComment_title_text">Comentario</string>
    <string name="recyclerView_date_title">FECHA</string>
    <string name="recyclerView_type_title">TIPO</string>

</resources>
