<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/fondo_splash">

    <LinearLayout
        android:translationZ="@dimen/elevation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/marginHorizontal"
        android:paddingVertical="@dimen/paddingVertical"
        android:layout_marginVertical="@dimen/marginVertical"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_150"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/paddingHorizontalTextInput"
            android:textColorHint="@color/colorText">

            <EditText
                android:textColor="@color/colorText"
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/paddingHorizontalTextInput"
            android:textColorHint="@color/colorText">


            <EditText
                android:textColor="@color/colorText"
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_text"
                android:singleLine="true"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/marginTopButtonContent">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:textColor="@color/colorText"
                android:layout_marginHorizontal="@dimen/marginHorizontalButton"
                android:text="@string/login_button_text"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/marginHorizontalButton"
                android:background="@color/colorAccent"
                android:textColor="@color/colorText"
                android:text="@string/register_button_text"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>