<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ClockIn_Fragment"
        tools:context=".Fragments.ClockInFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

    <!--
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/paddingHorizontalTextInput"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/logo_mono_100"/>

            <TextView
                android:layout_marginStart="@dimen/separateHorizontalItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/logo"
                android:layout_centerVertical="true"
                android:text="@string/clockIn_fragment_title"
                android:textSize="@dimen/fragmentTitleSize"
                android:textAlignment="center"
                android:textColor="@color/colorText" />

        </RelativeLayout>

        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_option_QR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/marginHorizontalButton"
                    android:layout_marginTop="@dimen/separationVerticalButtons"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorText"
                    android:textAlignment="center"
                    android:text="@string/QR_option_button_text"/>

                <Button
                    android:id="@+id/btn_option_NFC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/marginHorizontalButton"
                    android:layout_marginVertical="@dimen/separationVerticalButtons"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorText"
                    android:textAlignment="center"
                    android:text="@string/NFC_option_button_text"/>

                <Button
                    android:id="@+id/btn_option_ebeacon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/marginHorizontalButton"
                    android:layout_marginBottom="@dimen/separationVerticalButtons"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorText"
                    android:textAlignment="center"
                    android:text="@string/ebeacon_option_button_text"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>